--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   },
   "contributors": [
     "Trott"
-  ]
+  ],
+  "devDependencies": {
+    "grunt-jsonlint": "~1.0.4",
+    "grunt": "~0.4.2"
+  }
 }
