--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   ],
   "devDependencies": {
     "grunt-jsonlint": "~1.0.4",
-    "grunt": "~0.4.2"
+    "grunt": "~0.4.2",
+    "grunt-exec": "~0.4.2"
   }
 }
