--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "grunt-jsonlint": "~1.0.4",
     "grunt": "~0.4.2",
-    "grunt-exec": "~0.4.2"
+    "grunt-exec": "~0.4.2",
+    "grunt-contrib-jshint": "~0.7.2"
   }
 }
