add data for 4 tracks from Art Farmer's Work Of Art featuring Quincy Jones on piano

--- a/data/track_release.json
+++ b/data/track_release.json
@@ -54198,5 +54198,21 @@
   {
     "trackId":"13455",
     "releaseId":"183"
+  },
+  {
+    "trackId":"13456",
+    "releaseId":"2474"
+  },
+  {
+    "trackId":"13457",
+    "releaseId":"2474"
+  },
+  {
+    "trackId":"13458",
+    "releaseId":"2474"
+  },
+  {
+    "trackId":"13459",
+    "releaseId":"2474"
   }
 ]
