--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "grunt-jsonlint": "~1.0.4",
     "grunt": "~0.4.2",
     "grunt-exec": "~0.4.2",
-    "grunt-contrib-jshint": "~0.7.2"
+    "grunt-contrib-jshint": "~0.7.2",
+    "grunt-jasmine-node": "~0.1.0"
   }
 }
