--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "grunt": "~0.4.2",
     "grunt-exec": "~0.4.2",
     "grunt-contrib-jshint": "~0.7.2",
-    "grunt-jasmine-node": "~0.1.0"
+    "grunt-jasmine-node": "~0.1.0",
+    "glob": "~3.2.7"
   }
 }
