--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "grunt-contrib-jshint": "~0.7.2",
     "grunt-jasmine-node": "~0.1.0",
     "glob": "~3.2.7"
+  },
+  "dependencies": {
+    "optimist": "~0.6.0"
   }
 }
