npm test runs grunt which runs all the tests

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.1",
   "description": "What musicians played on what tracks",
   "scripts": {
-    "test": "node example/load"
+    "test": "grunt"
   },
   "repository": {
     "type": "git",
