add data for Sausage record

--- a/data/releases.json
+++ b/data/releases.json
@@ -14699,5 +14699,11 @@
     "names": [
       "Work Of Art"
     ]
+  },
+  {
+    "_id": "2475",
+    "names": [
+      "Riddles Are Abound Tonight"
+    ]
   }
 ]
