--- a/data/releases.json
+++ b/data/releases.json
@@ -14705,5 +14705,11 @@
     "names": [
       "Riddles Are Abound Tonight"
     ]
+  },
+  {
+    "_id": "2476",
+    "names": [
+      "Starbomb"
+    ]
   }
 ]
