add Maya Angelou "Stone Cold Dead In The Market"

--- a/data/releases.json
+++ b/data/releases.json
@@ -14711,5 +14711,11 @@
     "names": [
       "Starbomb"
     ]
+  },
+  {
+    "_id": "2477",
+    "names": [
+      "Miss Calypso"
+    ]
   }
 ]
