add "Been Found" by Ashford & Simpson

--- a/data/releases.json
+++ b/data/releases.json
@@ -14717,5 +14717,11 @@
     "names": [
       "Miss Calypso"
     ]
+  },
+  {
+    "_id": "2478",
+    "names": [
+      "Been Found"
+    ]
   }
 ]
