--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "music-routes-data",
-  "version": "0.2.1",
+  "version": "1.0.0",
   "description": "What musicians played on what tracks",
+  "homepage": "https://github.com/Trott/music-routes-data",
+  "engines" : { "node" : ">=0.10.28" },
   "scripts": {
     "test": "grunt"
   },
