--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "What musicians played on what tracks",
   "homepage": "https://github.com/Trott/music-routes-data",
-  "engines" : { "node" : ">=0.10.28" },
+  "engines": {
+    "node": ">=0.10.28"
+  },
   "scripts": {
     "test": "grunt"
   },
@@ -23,12 +25,13 @@
     "Trott"
   ],
   "devDependencies": {
-    "grunt-jsonlint": "~1.0.4",
-    "grunt": "~0.4.2",
+    "glob": "^7.1.2",
+    "grunt": "^1.0.3",
+    "grunt-cli": "^1.2.0",
+    "grunt-contrib-jshint": "^1.1.0",
     "grunt-exec": "~0.4.2",
-    "grunt-contrib-jshint": "~0.7.2",
-    "grunt-jasmine-node": "~0.1.0",
-    "glob": "~3.2.7"
+    "grunt-jasmine-node": "^0.1.0",
+    "grunt-jsonlint": "~1.0.4"
   },
   "dependencies": {
     "optimist": "~0.6.0"
