--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
   "version": "1.0.0",
   "description": "What musicians played on what tracks",
   "homepage": "https://github.com/Trott/music-routes-data",
+  "files": [
+    "/bin",
+    "/data",
+    "/doc",
+    "/example",
+    "/lib",
+    "README.md"
+  ],
   "scripts": {
     "test": "grunt"
   },
