add old town road

--- a/data/releases.json
+++ b/data/releases.json
@@ -14723,5 +14723,11 @@
     "names": [
       "Been Found"
     ]
+  },
+  {
+    "_id": "2479",
+    "names": [
+      "\"Old Town Road\" 7\" single"
+    ]
   }
 ]
