--- a/data/track_release.json
+++ b/data/track_release.json
@@ -54266,5 +54266,9 @@
   {
     "track_id": "13472",
     "release_id": "2478"
+  },
+  {
+    "track_id": "13473",
+    "release_id": "2479"
   }
 ]
