--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "grunt": "^1.0.4",
     "grunt-cli": "^1.2.0",
     "grunt-exec": "~0.4.2",
-    "grunt-jasmine-node": "^0.3.1",
     "grunt-jsonlint": "~1.0.4",
+    "jasmine": "^3.4.0",
     "semistandard": "^13.0.1"
   },
   "dependencies": {
