add "Back on the Chain Gang"

--- a/data/releases.json
+++ b/data/releases.json
@@ -14729,5 +14729,11 @@
     "names": [
       "\"Old Town Road\" 7\" single"
     ]
+  },
+  {
+    "_id": "2480",
+    "names": [
+      "Learning To Crawl"
+    ]
   }
 ]
