add pots & pans by bacon brothers & mickey hart

--- a/data/releases.json
+++ b/data/releases.json
@@ -14735,5 +14735,11 @@
     "names": [
       "Learning To Crawl"
     ]
+  },
+  {
+    "_id": "2481",
+    "names": [
+      "Dog Train"
+    ]
   }
 ]
