--- a/data/track_release.json
+++ b/data/track_release.json
@@ -54282,5 +54282,9 @@
   {
     "track_id": "13476",
     "release_id": "2482"
+  },
+  {
+    "track_id": "13477",
+    "release_id": "1242"
   }
 ]
