--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "README.md"
   ],
   "scripts": {
-    "test": "standard && grunt && bin/verify"
+    "test": "standard && jasmine spec/*.js && bin/verify"
   },
   "repository": {
     "type": "git",
@@ -33,9 +33,7 @@
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/git": "^9.0.0",
     "glob": "^7.1.2",
-    "grunt": "^1.1.0",
-    "grunt-exec": "~0.4.2",
-    "jasmine": "^3.4.0",
+    "jasmine": "^3.6.2",
     "semantic-release": "^17.2.1",
     "standard": "^14.3.4"
   },
