--- a/package.json
+++ b/package.json
@@ -30,15 +30,15 @@
     "Trott"
   ],
   "devDependencies": {
-    "@semantic-release/changelog": "^5.0.1",
-    "@semantic-release/git": "^9.0.0",
     "glob": "^7.1.2",
     "jasmine": "^3.6.2",
-    "semantic-release": "^17.4.4",
     "standard": "^16.0.3"
   },
   "dependencies": {
-    "minimist": "^1.2.5"
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/git": "^10.0.1",
+    "minimist": "^1.2.5",
+    "semantic-release": "^19.0.0-beta.1"
   },
   "release": {
     "branches": [
