feat: add Joel Frahm

--- a/data/releases.json
+++ b/data/releases.json
@@ -14747,5 +14747,11 @@
     "names": [
       "2nd Street"
     ]
+  },
+  {
+    "_id": "2483",
+    "names": [
+      "Don't Explain"
+    ]
   }
 ]
