--- a/data/track_release.json
+++ b/data/track_release.json
@@ -54286,5 +54286,9 @@
   {
     "track_id": "13477",
     "release_id": "1242"
+  },
+  {
+    "release_id": "2483",
+    "track_id": "13478"
   }
 ]
