--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "README.md"
   ],
   "scripts": {
-    "test": "standard && jasmine spec/*.js && bin/verify"
+    "test": "standard && c8 jasmine spec/*.js && bin/verify"
   },
   "repository": {
     "type": "git",
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
+    "c8": "^7.11.0",
     "glob": "^7.2.0",
     "jasmine": "^4.0.2",
     "semantic-release": "^19.0.2",
