--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,10 +16,10 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10.x, 12.x, 14.x, 15.x, 16.x, 17.x]
+        node-version: [10.x, 12.x, 14.x, 16.x, 17.x]
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
         persist-credentials: false
     - name: Use Node.js ${{ matrix.node-version }}
