--- a/package.json
+++ b/package.json
@@ -29,16 +29,16 @@
     "Trott"
   ],
   "devDependencies": {
-    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/changelog": "^6.0.2",
     "@semantic-release/git": "^10.0.1",
-    "c8": "^7.11.0",
-    "glob": "^8.0.1",
-    "jasmine": "^4.1.0",
-    "semantic-release": "^19.0.2",
-    "standard": "^16.0.4"
+    "c8": "7.12",
+    "glob": "8.1",
+    "jasmine": "4.5",
+    "semantic-release": "^20.0.2",
+    "standard": "^17.0.0"
   },
   "dependencies": {
-    "minimist": "^1.2.5"
+    "minimist": "^1.2.7"
   },
   "release": {
     "branches": [
