fix: add track data

--- a/data/releases.json
+++ b/data/releases.json
@@ -14753,5 +14753,11 @@
     "names": [
       "Don't Explain"
     ]
+  },
+  {
+    "_id": "2484",
+    "names": [
+      "Cal Tjader-Stan Getz Sextet"
+    ]
   }
 ]
