feat: add "Blues Groove" by Woody Herman

--- a/data/releases.json
+++ b/data/releases.json
@@ -14759,5 +14759,11 @@
     "names": [
       "Cal Tjader-Stan Getz Sextet"
     ]
+  },
+  {
+    "_id": "2485",
+    "names": [
+      "Blues Groove"
+    ]
   }
 ]
