feat: add track from Joe Jackson's _The Duke_

--- a/data/releases.json
+++ b/data/releases.json
@@ -14765,5 +14765,11 @@
     "names": [
       "Blues Groove"
     ]
+  },
+  {
+    "_id": "2486",
+    "names": [
+      "The Duke"
+    ]
   }
 ]
