feat: add Vulfpeck

--- a/data/releases.json
+++ b/data/releases.json
@@ -14771,5 +14771,11 @@
     "names": [
       "The Duke"
     ]
+  },
+  {
+    "_id": "2487",
+    "names": [
+      "My Finish Line"
+    ]
   }
 ]
