feat: add "Fanstume [singular] 2024"

--- a/data/releases.json
+++ b/data/releases.json
@@ -14777,5 +14777,11 @@
     "names": [
       "My Finish Line"
     ]
+  },
+  {
+    "_id": "2488",
+    "names": [
+      "https://www.youtube.com/watch\\?v\\=s0-_WzSfQe8"
+    ]
   }
 ]
