feat: add "Something" by Vulfpeck

--- a/data/releases.json
+++ b/data/releases.json
@@ -14783,5 +14783,11 @@
     "names": [
       "https://www.youtube.com/watch\\?v\\=s0-_WzSfQe8"
     ]
+  },
+  {
+    "_id": "2489",
+    "names": [
+      "The Joy Of Music, The Job Of Real Estate"
+    ]
   }
 ]
