Revert "chore: remove local install of semantic-release"
This reverts commit 4eac907e12e766bd34baa90cd0980fcce3c8df5c.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,5 +23,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: npx --package semantic-release --package @semantic-release/git --package @semantic-release/changelog semantic-release
-
+        run: npx semantic-release
